Fix hyphens in headers

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{2. Steadwick's Fall}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}{2. Steadwick's Fall}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
