--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{3. Deal With The Devil}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}{3. Deal With The Devil}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
