--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_US
 \cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{} {} {} {} {}Dungeons and Devils}
-\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{1. A Devilish Plan}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}{1. A Devilish Plan}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
