Fix lore text formatting

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -8,8 +8,9 @@
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1246353361456861276/1246353361456861276}{Archon Studios Discord}
 
 \textit{Catherine Ironfist has enlisted aid from Bracada and AvLee.
-  She knows we are close to Steadwick. We must occupy Steadwick before she arrives.
-  Once we own Erathia's capitol, not even Catherine Ironfist will wrench it from our hands.}
+She knows we are close to Steadwick.
+We must occupy Steadwick before she arrives.
+Once we own Erathia's capitol, not even Catherine Ironfist will wrench it from our hands.}
 
 \subsection*{\MakeUppercase{Scenario length}}
 
