[PL] Steadwick's Fall + small formatting fixes (#68)

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_US
 \cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{} {} {} {} {}Dungeons and Devils}
-\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{1. A Devilish Plan}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}{1. A Devilish Plan}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
@@ -9,10 +9,10 @@
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1243057664666238996/1243057664666238996}{Archon Studios Discord}
 
 \textit{A large elvish population inhabits Erathia's southeastern coast.
-  Green and gold dragons, native to the region, augment their military strength.
-  Before we conquer this region and redirect our forces to Steadwick, we must annihilate these dragons.
-  Our Kreegan allies from Eeofol have requested the honor of this mission.
-  The Kreegans are fierce warriors; they will relish the slaughter.}
+Green and gold dragons, native to the region, augment their military strength.
+Before we conquer this region and redirect our forces to Steadwick, we must annihilate these dragons.
+Our Kreegan allies from Eeofol have requested the honor of this mission.
+The Kreegans are fierce warriors; they will relish the slaughter.}
 
 \subsection*{\MakeUppercase{Scenario length}}
 
