--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{3. Deal With The Devil}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}{3. Deal With The Devil}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
@@ -7,10 +7,14 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1253923753981902939/1253923753981902939}{Archon Studios Discord}
 
-\textit{Queen Catherine has liberated Steadwick. A Kreegan envoy has been sent to the royal court asking for one million gold
-  ransom in return for the captive we hold, King Roland Ironfist of Erathia. They were unwilling to pay. It appears they are
-  going to attempt to rescue Roland. We are deep within Eeofol. We are Clan Kreelah. They will never take our captive, and
-  they will never take Kleesive. Prepare for battle!}
+\textit{Queen Catherine has liberated Steadwick.
+A Kreegan envoy has been sent to the royal court asking for one million gold ransom in return for the captive we hold, King Roland Ironfist of Erathia.
+They were unwilling to pay.
+It appears they are going to attempt to rescue Roland.
+We are deep within Eeofol.
+We are Clan Kreelah.
+They will never take our captive, and they will never take Kleesive.
+Prepare for battle!}
 
 \subsection*{\MakeUppercase{Scenario length}}
 
