[PL] Deal with the Devil

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -182,7 +182,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
 \begin{itemize}
   \item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.
   \item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.
-  \item Gain 3 when you defeat a Charging Hero's Army.
+  \item Gain 3 \svg{gold} when you defeat a Charging Hero's Army.
   \item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in
     your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city
     of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points
