Correct artifact name

--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -420,7 +420,7 @@ msgid ""
 "\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Zdolności Szarżujących Armii \\#1 i \\#2:} 1 × karta Artefaktu ,,Tarcza Potępionych'', 1 × karta Artefaktu ,,Miecz Piekielnego Ognia''\n"
+"\\textbf{Talia Zdolności Szarżujących Armii \\#1 i \\#2:} 1 × karta Artefaktu ,,Tarcza Potępionych'', 1 × karta Artefaktu ,,Miecz Ognia Piekielnego''\n"
 "\n"
 
 #. type: multicols*
@@ -451,7 +451,7 @@ msgid ""
 "  1 × ``Ballistics'' Ability card (at Basic effect), 1 × ``First Aid'' Ability card (at Expert effect)\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Umiejętności Ostatniej Szarżującej Armii:} 1 × Karta Artefaktu ,,Tarcza Potępionych'', 1 × Karta Artefaktu ,,Miecz Piekielnego Ognia'',\n"
+"\\textbf{Talia Umiejętności Ostatniej Szarżującej Armii:} 1 × Karta Artefaktu ,,Tarcza Potępionych'', 1 × Karta Artefaktu ,,Miecz Ognia Piekielnego'',\n"
 "  1 × Karta Zdolności ,,Balistyka'' (Podstawowa), 1 × Karta Zdolności ,,Pierwsza Pomoc'' (Mistrzowska)\n"
 "\n"
 
@@ -475,7 +475,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\\\Obie karty Artefaktów wszystkich Szarżujących Armii traktowane są jako Umiejętności i używają górnego ,,słabszego'' efektu.\n"
-",,Miecz Piekielnego Ognia'' będzie używany w atakach i kontratakach. Nie jest używany podczas atakowania Murów lub Bram\n"
+",,Miecz Ognia Piekielnego'' będzie używany w atakach i kontratakach. Nie jest używany podczas atakowania Murów lub Bram\n"
 "i pozostaje aktywny na jednostce. Jeśli zostanie dobrana karta ,,Tarcza Potępionych'', jej efekt wchodzi w życie, gdy\n"
 "jakakolwiek Jednostka Szarżującej Armii otrzyma obrażenia od ataku lub kontrataku. Jeśli karta Umiejętności AI zaleca ,,powtórzenie'', karty Artefaktów\n"
 "nie są natychmiastowo używane ponownie, lecz są używane, gdy następna jednostka będzie mogła je zastosować.\n"
