--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -604,7 +604,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 1.:}\n"
 "\\begin{itemize}\n"
-"  \\item Read: ,,Królowa Katarzyna Ironfist odrzuca nasze żądanie okupu i gromadzi armie do operacji ratunkowej.\n"
+"  \\item Przeczytaj: ,,Królowa Katarzyna Ironfist odrzuca nasze żądanie okupu i gromadzi armie do operacji ratunkowej.\n"
 "    Klanie Kreelah, przygotuj nasze obrony! Chroń Klessive za wszelką cenę. Mamy przewagę.''\n"
 "\\end{itemize}\n"
 "\n"
@@ -623,7 +623,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 2.:}\n"
 "\\begin{itemize}\n"
-"  \\item Read: ,,Armie Zamku i AvLee będą wkrótce u naszych bram. Muszą przejść przez wulkaniczny korytarz\n"
+"  \\item Przeczytaj: ,,Armie Zamku i AvLee będą wkrótce u naszych bram. Muszą przejść przez wulkaniczny korytarz\n"
 "    na wschodzie. Nie możemy stawać z nimi do walki w polu, musimy bronić się wewnątrz Klessive, gdzie\n"
 "    ich magia jest osłabiona na tej przeklętej ziemi.''\n"
 "\\end{itemize}\n"
@@ -642,7 +642,7 @@ msgid ""
 msgstr ""
 "\\textbf{Runda 3.:}\n"
 "\\begin{itemize}\n"
-"  \\item Read: ,,Nasi zwiadowcy zgłosili, że wróg zdobył 2 bardzo potężne artefakty z pomocą lokalnych pustelników. Są głupcami, jeśli myślą, że pomogą im one pokonać naszą kreęgańską fortecę.''\n"
+"  \\item Przeczytaj: ,,Nasi zwiadowcy zgłosili, że wróg zdobył 2 bardzo potężne artefakty z pomocą lokalnych pustelników. Są głupcami, jeśli myślą, że pomogą im one pokonać naszą kreęgańską fortecę.''\n"
 "\\end{itemize}\n"
 "\n"
 
