Křišťálový Drak => Krystalový Drak

--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -335,8 +335,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Vyberte jednoho z Draků ze seznamu bossů: Azurový drak, Křišťálový drak, Rezavý drak nebo Pohádkový drak.\n"
-"    Můžete si vybrat náhodně tím, že si vyberete jednu ze čtyř promíchaných karet Statistik: \\textit{Útok} -- Azurový, \\textit{Obrana} -- Křišťálový, \\textit{Znalosti} -- Rezavý, \\textit{Síla} -- Pohádkový.\n"
+"  \\item Vyberte jednoho z Draků ze seznamu bossů: Azurový drak, Krystalový drak, Rezavý drak nebo Pohádkový drak.\n"
+"    Můžete si vybrat náhodně tím, že si vyberete jednu ze čtyř promíchaných karet Statistik: \\textit{Útok} -- Azurový, \\textit{Obrana} -- Krystalový, \\textit{Znalosti} -- Rezavý, \\textit{Síla} -- Pohádkový.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -521,29 +521,29 @@ msgid ""
 "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle round.  \\end{itemize} }"
 msgstr ""
-"{ \\textbf{\\MakeUppercase{Boss: Křišťálový Drak}} \\medskip \\\\"
-"\\textit{Křišťálový Drak je celý vyroben z červeného křišťálu a oživen "
+"{ \\textbf{\\MakeUppercase{Boss: Krystalový Drak}} \\medskip \\\\"
+"\\textit{Krystalový Drak je celý vyroben z červeného krystalu a oživen "
 "magickými prostředky. Je doslova poloprůhledný, osvětlený ze středu svým "
 "magickým srdcem. Často se používá jako výcvikový nástroj pro mladé zabijáky "
-"draků a mnoho kouzelníků také vytváří tato stvoření kvůli křišťálu, který "
-"vylučují. } \\medskip \\\\ \\textbf{Boj s Křišťálovým Drakem:} "
-"\\begin{enumerate} \\item Umístěte miniaturu/kartu Křišťálového Draka na "
+"draků a mnoho kouzelníků také vytváří tato stvoření kvůli krystalu, který "
+"vylučují. } \\medskip \\\\ \\textbf{Boj s Krystalovým Drakem:} "
+"\\begin{enumerate} \\item Umístěte miniaturu/kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Na začátku každého bojového kola zkontrolujte, zda "
 "byli v předchozím kole odstraněni nějací Golemové. Pokud ano, vyvolejte "
 "jednoho nového Diamantového nebo Zlatého Golema (vybraného náhodně) do "
-"poslední řady bojiště. \\item \\textit{Požírání Golemů:} Křišťálový Drak "
+"poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
 "může žrát Golemy, aby si obnovil zdraví. Během svého tahu, pokud je "
-"Křišťálový Drak vedle Golema, může se rozhodnout ho sežrat, čímž odstraní "
+"Krystalový Drak vedle Golema, může se rozhodnout ho sežrat, čímž odstraní "
 "určité množství \\svg{damage-red} podle typu sežraného Golema: "
 "\\begin{itemize} \\item Zlatý Golem: Odstraňte 2 \\svg{damage-red}. \\item "
 "Diamantový Golem: Odstraňte 4 \\svg{damage-red}. \\item[] "
-"\\textbf{Poznámka:} Křišťálový Drak může během svého tahu sežrat pouze "
+"\\textbf{Poznámka:} Krystalový Drak může během svého tahu sežrat pouze "
 "jednoho Golema. \\end{itemize} \\item Schopnosti Golemů: Zlatí a Diamantoví "
 "Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
 "jejich kartách. Slouží především jako potrava pro regeneraci zdraví "
-"Křišťálového Draka. \\item Křišťálový Drak má \\textit{Odvetný útok dvakrát} "
+"Krystalového Draka. \\item Krystalový Drak má \\textit{Odvetný útok dvakrát} "
 "za bojové kolo. \\end{itemize} }"
 
 #. type: Plain text
