Fixing expansion name for Faerie Dragon

--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -714,7 +714,7 @@ msgid ""
 "left, the dragon loses the ability to cast spells.  \\end{itemize} }"
 msgstr ""
 "{ \\textbf{\\MakeUppercase{Boss: Pohádkový Drak {\\scriptsize Vyžaduje "
-"Rozšíř. Pevnost}}} \\medskip \\\\ \\textit{Pohádkoví Draci jsou klamně "
+"Rozšíření Bašta}}} \\medskip \\\\ \\textit{Pohádkoví Draci jsou klamně "
 "roztomilí, ale ve skutečnosti jsou to zlomyslní šprýmaři. O těchto "
 "proslulých výtržnících je známo jen málo. To, co je známo, se nachází spíše "
 "v pohádkových knížkách než v magických spisech. Někteří říkají, že jsou "
