--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -364,7 +364,7 @@ msgstr ""
 "    Zapoznaj się z zasadami walki określonymi w zasadach wybranego Smoka.\n"
 "  \\item Podczas walki ze Smokiem zignoruj zdolność specjalną Gorgon.\n"
 "  \\item Bohaterowie nie mogą wycofać się z walk ze Smokiem.\n"
-"  \\item Gdy gracze odwiedzają Obelisk, może wybrać rzut Kością Skarbów albo otrzymać 1 \\svg{experience}.\n"
+"  \\item Gdy gracze odwiedzają Obelisk, mogą wybrać rzut Kością Skarbów albo otrzymać 1 \\svg{experience}.\n"
 "  \\item Gracze mogą odwiedzić każdy Obelisk tylko raz.\n"
 "    Następnie muszą umieścić swoją Kostkę Frakcji na polu.\n"
 "  \\item W walce ze Smokiem nie ma limitu rund walki.\n"
@@ -498,32 +498,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:214
-#, fuzzy
-#| msgid ""
-#| "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
-#| "entirely from red crystal and brought to life through magical means, the "
-#| "Crystal Dragon is literally semitransparent, lit from the center by its "
-#| "magical heart.  Used frequently as a training tool for young dragon "
-#| "slayers, many wizards also create these creatures for the crystal they "
-#| "shed.  } \\medskip \\textbf{Fighting the Crystal Dragon:} "
-#| "\\begin{enumerate} \\item Place the Crystal Dragon miniature/card on the "
-#| "battlefield.  Ignore its ability.  \\item Place two Gold Golems and two "
-#| "Diamond Golems on the battlefield.  \\end{enumerate} \\medskip "
-#| "\\textbf{Rules:} \\begin{itemize} \\item At the start of every battle "
-#| "round, check if any of the Golems were removed in the previous round.  If "
-#| "so, spawn one new Diamond or Gold Golem (chosen randomly) in the last row "
-#| "of the battlefield.  \\item \\textit{Golem Devour:} The Crystal Dragon "
-#| "can consume Golems to regain health.  During its turn, if the Crystal "
-#| "Dragon is adjacent to a Golem, it can choose to consume it, removing a "
-#| "certain amount of \\svg{damage-red} based on the type of Golem consumed: "
-#| "\\begin{itemize} \\item Consuming a Gold Golem: Remove 2 \\svg{damage-"
-#| "red}.  \\item Consuming a Diamond Golem: Remove 4 \\svg{damage-red}.  "
-#| "\\item[] \\textbf{Note:} The Crystal Dragon can only consume one Golem "
-#| "per turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond Golems "
-#| "do not possess any additional abilities beyond those specified on their "
-#| "cards.  They primarily serve as fodder for the Crystal Dragon's health "
-#| "regeneration.  \\item The Crystal Dragon \\textit{counterattacks twice} "
-#| "per battle round.  \\end{itemize} }"
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
 "entirely from red crystal and brought to life through magical means, the "
@@ -577,24 +551,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:237
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
-#| "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svgunit[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-#| "\\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{bronze}} \\textbf{Easy}} "
-#| "& \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]{silver}} "
-#| "\\textbf{Normal}} & \\darkcell{\\raisebox{-.2\\height}{\\svgunit[20]"
-#| "{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.2\\height}"
-#| "{\\svgunit[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.8]{No "
-#| "additional\\\\changes} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
-#| "{\\includegraphics[height=15px]{\\images/hp.png}} 22} & \\lightcell[2.8]"
-#| "{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 26 \\\\ +1 Counterattack}} & \\lightcell[2.8]"
-#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 32 \\\\ +1 Counterattack \\\\ Remove additional 2 \\svg{damage-"
-#| "table} by consuming Golems} \\\\ \\end{tabularx} }"
 msgid ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
